tests/machine/x/scala/cross_join_filter.scala
// Generated by Mochi compiler v0.10.26 on 2025-07-16T17:38:43Z
object cross_join_filter {
  case class Pair(n: Int, l: String)

  def main(args: Array[String]): Unit = {
    val nums = List(1, 2, 3)
    val letters = List("A", "B")
    val pairs = for { n <- nums; l <- letters; if n % 2 == 0 } yield Pair(n = n, l = l)
    println("--- Even pairs ---")
    for(p <- pairs) {
      println(s"${p.n} ${p.l}")
    }
  }
}
